--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint --fix ./src",
     "format": "prettier --write ./src",
     "precommit": "lint-staged",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
@@ -30,7 +32,12 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "babel-jest": "^26.6.3",
+    "enzyme": "^3.11.0",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
     "eslint-config-standard": "^16.0.2",
@@ -41,6 +48,8 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
+    "jest": "^26.6.3",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "sass": "^1.32.8",
