--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "precommit": "lint-staged",
     "postinstall": "husky install",
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage && codecov"
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
@@ -37,6 +37,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "babel-jest": "^26.6.3",
+    "codecov": "^3.8.1",
     "enzyme": "^3.11.0",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
